# remex

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSES.md  README.md  ROADMAP.md  pyproject.toml  remex.toml
.github/workflows/: ci.yml  publish.yml  release.yml
docs/superpowers/plans/: 2026-04-08-remex-monorepo-consolidation.md  2026-04-09-remex-studio-tauri.md  2026-04-12-font-plus-jakarta-sans.md  2026-04-13-ingest-enhancements.md  2026-04-13-maintenance-fixes.md  2026-04-13-multi-collection-query.md  2026-04-13-open-source-file.md  2026-04-13-query-history.md  2026-04-14-collection-delete.md  2026-04-14-ingest-progress-persistence.md  2026-04-14-keyboard-shortcuts.md  2026-04-14-query-empty-states.md  2026-04-14-result-card-expand.md  2026-04-18-v1-release-prep.md  2026-04-19-remex-pro-monetization.md  2026-04-29-bootstrapper.md  2026-05-11-ingest-pane-layout-redesign.md
docs/superpowers/specs/: 2026-04-08-remex-monorepo-consolidation-design.md  2026-04-09-remex-studio-tauri-design.md  2026-04-12-font-plus-jakarta-sans-design.md  2026-04-13-ingest-enhancements-design.md  2026-04-13-maintenance-fixes-design.md  2026-04-13-multi-collection-query-design.md  2026-04-13-open-source-file-design.md  2026-04-13-query-history-design.md  2026-04-14-collection-delete-design.md  2026-04-14-ingest-progress-persistence-design.md  2026-04-14-keyboard-shortcuts-design.md  2026-04-14-query-empty-states-design.md  2026-04-14-query-pane-improvements-design.md  2026-04-14-result-card-expand-design.md  2026-04-18-v1-release-prep-design.md  2026-04-19-remex-pro-monetization-design.md  2026-04-24-marketing-website-design.md  2026-04-29-bootstrapper-design.md  2026-05-08-remex-v1.5-onnx-embedding-design.md  2026-05-11-ingest-pane-layout-redesign.md
examples/: 01_ingest.py  02_query.py  03_agent.py  04_collection_management.py  quickstart.py
remex/: __init__.py  cli.py
remex/api/: __init__.py  __main__.py  main.py  schemas.py
remex/api/routes/: collections.py  ingest.py  query.py  system.py
remex/core/: __init__.py  ai.py  config.py  embedding.py  exceptions.py  extractors.py  logger.py  models.py  pipeline.py  sqlite_ingester.py
scripts/: smoke_test.py
studio/: LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
studio/src/: App.css  App.test.tsx  App.tsx  index.css
studio/src-tauri/: Cargo.toml  generate-installer-images.py  tauri.conf.json
studio/src-tauri/capabilities/: default.json
studio/src-tauri/icons/: icon.icns
studio/src-tauri/src/: lib.rs  license.rs  setup.rs  watch.rs
studio/src-tauri/src/license/: api.rs  constants.rs
studio/src/api/: client.test.ts  client.ts
studio/src/components/home/: AuroraBg.tsx  NetworkBg.tsx
studio/src/components/ingest/: EmbeddingModelField.test.tsx  EmbeddingModelField.tsx  FilesTab.test.tsx  FilesTab.tsx  IngestPane.test.tsx  IngestPane.tsx  SQLiteTab.cancel.test.tsx  SQLiteTab.test.tsx  SQLiteTab.tsx  ingestShared.ts
studio/src/components/layout/: AppShell.tsx  CollectionSwitcher.test.tsx  CollectionSwitcher.tsx  KeyboardShortcutsModal.tsx  OnboardingModal.test.tsx  OnboardingModal.tsx  Sidebar.tsx  layout.test.tsx
studio/src/components/license/: LicenseCard.test.tsx  LicenseCard.tsx  ProBadge.tsx  UpgradeModal.test.tsx  UpgradeModal.tsx
studio/src/components/log-viewer/: LogsPane.tsx
studio/src/components/query/: ChunkViewerModal.tsx  QueryPane.test.tsx  QueryPane.tsx  ResultCard.test.tsx  ResultCard.tsx
studio/src/components/settings/: SettingsPane.test.tsx  SettingsPane.tsx  WatchFoldersCard.test.tsx  WatchFoldersCard.tsx
studio/src/components/setup/: SetupScreen.test.tsx  SetupScreen.tsx
studio/src/components/ui/: textarea.tsx
studio/src/hooks/: useApi.test.tsx  useApi.ts  useDragDrop.test.ts  useDragDrop.ts  useKeyboardShortcuts.test.ts  useKeyboardShortcuts.ts  useSidecar.test.tsx  useSidecar.ts
studio/src/lib/: constants.ts  exports.test.ts  exports.ts  formatDuration.test.ts  formatDuration.ts  licenseApi.ts
studio/src/pages/: Home.test.tsx  Home.tsx
studio/src/store/: app.license.test.ts  app.test.ts  app.ts  setup-store.test.ts
studio/src/test/: setup.ts  utils.tsx
synapse/: pipeline.py  sqlite_ingester.py
synapse_core/: __init__.py  ai.py  cli.py  config.py  exceptions.py  extractors.py  logger.py  models.py  pipeline.py  sqlite_ingester.py
tests/: test_api_ingest.py  test_api_ingest_sqlite_stream.py  test_api_ingest_stream.py  test_api_query.py  test_api_rename.py  test_api_sqlite_tables.py  test_chunker.py  test_cli.py  test_config.py  test_embedding.py  test_extractors.py  test_logger.py  test_models_and_exceptions.py  test_new_features.py  test_pipeline.py  test_sqlite_ingester.py  test_v061_features.py
website/: .htaccess  index.html  privacy.html  refund.html  robots.txt  sitemap.xml  terms.html
(+4 files in other folders)
