[project]
name = "remex-cli"
version = "1.0.0"
description = "Local-first RAG library — ingest files and SQLite, query semantically, pipe results into any AI agent"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "adm-crow"}]
license = "Apache-2.0"
keywords = ["rag", "ai", "llm", "vector", "chromadb", "embeddings", "local-ai", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "chromadb",
    "sentence-transformers",
    "pypdf",
    "python-docx",
    "click",
]

[project.optional-dependencies]
sentence = ["nltk"]
formats  = ["python-pptx", "openpyxl", "beautifulsoup4", "ebooklib", "odfpy"]
ai       = ["anthropic", "openai"]
api      = ["fastapi", "uvicorn[standard]"]
studio   = ["remex[api]"]
all      = ["remex[sentence,formats,ai,api]"]

[project.scripts]
remex = "remex.cli:cli"

[project.urls]
Homepage = "https://github.com/adm-crow/remex"
Repository = "https://github.com/adm-crow/remex"
Issues = "https://github.com/adm-crow/remex/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "nltk",
    "python-pptx",
    "openpyxl",
    "beautifulsoup4",
    "ebooklib",
    "odfpy",
    "pytest-asyncio>=0.21",
    "fastapi",
    "uvicorn[standard]",
    "httpx",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.hatch.build.targets.wheel]
packages = ["remex"]
